Thu Feb 09 20:57:00 UTC 2023
Update
    Scrutor to 4.2.1
    SqlKata to 3.2.3
    SqlKata.Execution 3.2.3
    Microsoft.NET.Test.Sdk to 17.4.1
    Moq 4.18.4
    coverlet.collector to 3.2.0
Small change
    style of code same classes
+--------------------------+
Sat Feb 02 18:05:00 UTC 2023
Feature
    Add layer Infrastrutura
    Add layer UnitTest
Fix
    Code generator error in layer domain and templates
Improvment
    Add handler on code generator to Infrastrutura and UnitTests
    Alter way how validate model, remove fluent validation
+--------------------------+
Mon Jan 30 20:28:00 UTC 2023
Feature
    Add code generator
    Add layer Domain
+--------------------------+
Have fun!  :-)