@@ -1,2 +1,3 @@
 global using Xunit;
 global using Domain.Entities;
+global using Moq;
